# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp_solver_kb_354"
version = "0.1.0"
description = "A Python library for solving the Traveling Salesperson Problem using various algorithms."
authors = [
    {name = "Kyle", email = "kyle.bonvillian@students.cau.edu"}
]
dependencies = [
    "numpy"
]

[tool.setuptools]
packages = ["tsp_solver_kb_354", "tsp_solver_kb_354.algorithms"]